--- a/parent/parent.html
+++ b/parent/parent.html
@@ -2,6 +2,13 @@
 <a ui-sref="parent.viewOne">one</a>
 <a ui-sref="parent.viewTwo">two</a>
 <a ui-sref="parent.viewThree">three</a>
-<div class="parent" ui-view>
+<div class="parent" ui-view></div>
 
-</div>
+<pre>
+  <!-- Here's some values to keep an eye on in the sample in order to understand $state and $stateParams -->
+  $state = {{$state.current.name}}
+  $stateParams = {{$stateParams}}
+  $state full url = {{ $state.$current.url.source }}
+  <!-- $state.$current is not a public api, we are using it to
+       display the full url for learning purposes-->
+</pre>
