--- a/parent/parent.html
+++ b/parent/parent.html
@@ -1,14 +1,19 @@
 <h1>Parent Div</h1>
-<a ui-sref="parent.viewOne">one</a>
-<a ui-sref="parent.viewTwo">two</a>
-<a ui-sref="parent.viewThree">three</a>
+<nav>
+  <a ui-sref="parent.viewOne" ui-sref-active="active">one</a>
+  <a ui-sref="parent.viewTwo" ui-sref-active="active">two</a>
+  <a ui-sref="parent.viewThree" ui-sref-active="active">three</a>
+</nav>
+
 <div class="parent" ui-view></div>
 
-<pre>
-  <!-- Here's some values to keep an eye on in the sample in order to understand $state and $stateParams -->
-  $state = {{$state.current.name}}
-  $stateParams = {{$stateParams}}
-  $state full url = {{ $state.$current.url.source }}
-  <!-- $state.$current is not a public api, we are using it to
-       display the full url for learning purposes-->
-</pre>
+<code>
+  <p>$state = {{$state.current.name}}<p>
+  <p>$stateParams = {{$stateParams}}<p>
+  <p>$state full url = {{$state.$current.url.source}}<p>
+  <p>$state includes contacts = {{$state.includes("contacts")}}<p>
+  <p>$state includes state One = {{$state.includes("parent.viewOne")}}<p>
+  <p>$state includes state Two = {{$state.includes("parent.viewTwo")}}<p>
+  <p>$state includes state Three = {{$state.includes("parent.viewThree")}}<p>
+  <p>$state includes parent state = {{$state.includes("parent")}}<p>
+</code>
