factors out template folder for components

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="http://code.angularjs.org/1.1.5/angular-resource.min.js"></script>
     <script src="http://angular-ui.github.io/ui-router/release/angular-ui-router.min.js"></script>
     <script src="./app.js" charset="utf-8"></script>
-    <script type="text/javascript" src="./directive.js"></script>
+    <script type="text/javascript" src="./parent/parent-dir.js"></script>
     <script type="text/javascript" src="./viewOne/viewOne-dir.js"></script>
     <script type="text/javascript" src="./viewTwo/viewTwo-dir.js"></script>
     <script type="text/javascript" src="./viewThree/viewThree-dir.js"></script>
