factos controller logic out of state file and into controller files

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <script src="http://angular-ui.github.io/ui-router/release/angular-ui-router.min.js"></script>
     <script src="./app.js" charset="utf-8"></script>
     <script type="text/javascript" src="./parent/parent-dir.js"></script>
+    <script type="text/javascript" src="./parent/parent-ctrl.js"></script>
     <script type="text/javascript" src="./viewOne/viewOne-dir.js"></script>
+    <script type="text/javascript" src="./viewOne/viewOne-ctrl.js"></script>
     <script type="text/javascript" src="./viewTwo/viewTwo-dir.js"></script>
+    <script type="text/javascript" src="./viewTwo/viewTwo-ctrl.js"></script>
     <script type="text/javascript" src="./viewThree/viewThree-dir.js"></script>
+    <script type="text/javascript" src="./viewThree/viewThree-ctrl.js"></script>
 
     <link rel="stylesheet" href="./style.css" media="screen" title="no title" charset="utf-8">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
