--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="./viewTwo/viewTwo-ctrl.js"></script>
     <script type="text/javascript" src="./viewThree/viewThree-dir.js"></script>
     <script type="text/javascript" src="./viewThree/viewThree-ctrl.js"></script>
+    <script type="text/javascript" src="./services/reddit-service.js"></script>
 
     <link rel="stylesheet" href="./style.css" media="screen" title="no title" charset="utf-8">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
