adds reddit service

--- a/viewOne/viewOne.html
+++ b/viewOne/viewOne.html
@@ -1,9 +1,14 @@
 <h1>View One<small></small></h1>
 
 <div class="view-one-text">
-  Everyday carry kitsch DIY whatever celiac bushwick. Forage fanny pack selvage chambray, tote bag narwhal etsy selfies mustache crucifix shabby chic locavore banh mi. Godard williamsburg post-ironic flexitarian, keytar listicle banjo kinfolk gastropub scenester wolf banh mi. Everyday carry yr flannel put a bird on it, asymmetrical 90's cornhole art party. Kale chips meh schlitz, portland truffaut asymmetrical venmo try-hard bushwick selvage freegan. Gochujang etsy kickstarter, farm-to-table salvia chartreuse asymmetrical cold-pressed ramps yr mumblecore banh mi. Ethical squid pinterest, kickstarter kale chips pork belly scenester ramps schlitz vice letterpress pabst deep v portland chia.
+  Everyday carry kitsch DIY whatever celiac bushwick.
 </div>
 
+<input type="text" name="name" value="search reddit" ng-model="query">
+
+<input type="button" name="name" value="submit" ng-click="submit(query)">
+
+{{query}}
 <br>
 {{yo}}
 <br>
