--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-
-    <!-- Bootstrap -->
+    <title>Insanegular</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="http://code.angularjs.org/1.1.5/angular.min.js"></script>
@@ -21,23 +19,14 @@
     <script type="text/javascript" src="./viewTwo/viewTwo-ctrl.js"></script>
     <script type="text/javascript" src="./viewThree/viewThree-dir.js"></script>
     <script type="text/javascript" src="./viewThree/viewThree-ctrl.js"></script>
-    <script type="text/javascript" src="./services/reddit-service.js"></script>
-
+    <script type="text/javascript" src="./services/redditService.js"></script>
     <link rel="stylesheet" href="./style.css" media="screen" title="no title" charset="utf-8">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body ng-app="app">
     <a ui-sref="parent">Parent</a>
     <a ui-sref="home">Home</a>
     <div ui-view></div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
