--- a/parent/parent.html
+++ b/parent/parent.html
@@ -1,8 +1,9 @@
 <h1>Parent Div</h1>
 <nav>
-  <a ui-sref="parent.viewOne" ui-sref-active="active">one</a>
-  <a ui-sref="parent.viewTwo" ui-sref-active="active">two</a>
-  <a ui-sref="parent.viewThree" ui-sref-active="active">three</a>
+  <a ui-sref="parent.viewOne" ui-sref-active="active">One</a>
+  <a ui-sref="parent.viewTwo" ui-sref-active="active">Two</a>
+  <a ui-sref="parent.viewThree" ui-sref-active="active">Three</a>
+  <a ui-sref="parent" ui-sref-active="active">Parent</a>
 </nav>
 
 <div class="parent" ui-view></div>
