factors navbar into directive

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="./viewThree/viewThree-dir.js"></script>
     <script type="text/javascript" src="./viewThree/viewThree-ctrl.js"></script>
     <script type="text/javascript" src="./services/redditService.js"></script>
+    <script type="text/javascript" src="./directives/nav-bar-dir.js"></script>
+
     <link rel="stylesheet" href="./style.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body ng-app="app">
