--- a/viewOne/viewOne.html
+++ b/viewOne/viewOne.html
@@ -1,15 +1,7 @@
-<h1>View One<small></small></h1>
+<h1>View One</h1>
 
 <div class="view-one-text">
-  Everyday carry kitsch DIY whatever celiac bushwick.
 </div>
 
 <input type="text" name="name" value="search reddit" ng-model="query">
-
 <input type="button" name="name" value="submit" ng-click="submit(query)">
-
-{{query}}
-<br>
-{{yo}}
-<br>
-{{helloWorld}}
