--- a/viewThree/viewThree.html
+++ b/viewThree/viewThree.html
@@ -1,10 +1,5 @@
-<h1>View Three<small></small></h1>
+<h1>View Three</h1>
 
 <div class="view-three-text">
-  Everyday carry kitsch DIY whatever celiac bushwick.
-</div>
 
-<br>
-{{heyo}}
-<br>
-{{helloWorld}}
+</div>
