--- a/viewTwo/viewTwo.html
+++ b/viewTwo/viewTwo.html
@@ -1,11 +1,5 @@
-<h1>View Two<small></small></h1>
+<h1>View Two</h1>
 
 <div class="view-two-text">
-  Everyday carry kitsch DIY whatever celiac bushwick. Forage fanny pack selvage chambray.
+
 </div>
-
-
-<br>
-{{yo}}
-<br>
-{{helloWorld}}
