--- a/parent/parent.html
+++ b/parent/parent.html
@@ -1,10 +1,5 @@
 <h1>Parent Div</h1>
-<nav>
-  <a ui-sref="parent.viewOne" ui-sref-active="active">One</a>
-  <a ui-sref="parent.viewTwo" ui-sref-active="active">Two</a>
-  <a ui-sref="parent.viewThree" ui-sref-active="active">Three</a>
-  <a ui-sref="parent" ui-sref-active="active">Parent</a>
-</nav>
+<navbar></navbar>
 
 <div class="parent" ui-view></div>
 
