--- a/parent/parent.html
+++ b/parent/parent.html
@@ -1,15 +1,13 @@
-<h1>Parent Div</h1>
 <navbar></navbar>
-
 <div class="parent" ui-view></div>
 
-<pre>
-  <code>$state = {{$state.current.name}}</code>
-  <code>$stateParams = {{$stateParams}}</code>
-  <code>$state full url = {{$state.$current.url.source}}</code>
-  <code>$state includes contacts = {{$state.includes("contacts")}}</code>
-  <code>$state includes state One = {{$state.includes("parent.viewOne")}}</code>
-  <code>$state includes state Two = {{$state.includes("parent.viewTwo")}}</code>
-  <code>$state includes state Three = {{$state.includes("parent.viewThree")}}</code>
-  <code>$state includes parent state = {{$state.includes("parent")}}</code>
-</pre>
+<!-- <pre>
+  <p>$state = {{$state.current.name}}</p>
+  <p>$stateParams = {{$stateParams}}</p>
+  <p>$state full url = {{$state.$current.url.source}}</p>
+  <p>$state includes contacts = {{$state.includes("contacts")}}</p>
+  <p>$state includes state One = {{$state.includes("parent.viewOne")}}</p>
+  <p>$state includes state Two = {{$state.includes("parent.viewTwo")}}</p>
+  <p>$state includes state Three = {{$state.includes("parent.viewThree")}}</p>
+  <p>$state includes parent state = {{$state.includes("parent")}}</p>
+</pre> -->
