--- a/viewOne/viewOne.html
+++ b/viewOne/viewOne.html
@@ -1,7 +1,4 @@
 <h1>View One</h1>
-
-<div class="view-one-text">
-</div>
-
+<div class="view-one-text"></div>
 <input type="text" name="name" value="search reddit" ng-model="query">
 <input type="button" name="name" value="submit" ng-click="submit(query)">
