--- a/viewOne/viewOne.html
+++ b/viewOne/viewOne.html
@@ -1,4 +1,13 @@
-<h1>View One</h1>
-<div class="view-one-text"></div>
-<input type="text" name="name" value="search reddit" ng-model="query">
-<input type="button" name="name" value="submit" ng-click="submit(query)">
+<input class="search-bar" type="text" name="name" value="search reddit" ng-model="query" placeholder="Enter a query">
+<input type="button" name="name" value="submit" ng-click="getReddit(query)" >
+<ul>
+  <div class="grid">
+    <div class="grid-item" ng-repeat="post in posts track by $index">
+      <img src="{{post.thumbnail}}" alt="" />
+      <!-- <img src="{{post.url}}" alt="" /> -->
+      <h2 class='title'>{{post.title}}</h2>
+      <cite>{{post.author}}<cite>
+      <code>{{post.score}}</code>
+    </div>
+  </div>
+</ul>
